# CppVerseHub

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  project_generator_script.sh
docs/: README.md
docs/api_reference/html/: index.html
docs/api_reference/html/concurrency/: index.html
docs/api_reference/html/memory/: index.html
docs/api_reference/html/modern/: index.html
docs/api_reference/html/patterns/: index.html
docs/api_reference/html/stl/: index.html
docs/api_reference/html/templates/: index.html
docs/api_reference/html/utils/: index.html
docs/cheat_sheets/: Concurrency_CheatSheet.md  DesignPatterns_CheatSheet.md  Exceptions_CheatSheet.md  MemoryManagement_CheatSheet.md  ModernCpp_CheatSheet.md  OOP_CheatSheet.md  STL_CheatSheet.md  Templates_CheatSheet.md
docs/design_docs/: architecture_overview.md  concurrency_design.md  design_patterns_explained.md  modern_cpp_usage.md
examples/: CMakeLists.txt
examples/advanced_usage/: CMakeLists.txt  custom_missions.cpp  performance_optimization.cpp  plugin_systems.cpp
examples/basic_usage/: CMakeLists.txt  entity_creation.cpp  getting_started.cpp  simple_simulation.cpp
examples/tutorials/: CMakeLists.txt  cpp_concepts_walkthrough.cpp  design_patterns_tutorial.cpp  modern_cpp_features.cpp
scripts/: build.sh  clean.sh  generate_docs.sh  generate_project.sh  run_tests.sh  setup_dev_env.sh
src/: CMakeLists.txt  main.cpp
src/algorithms/: CMakeLists.txt  DataStructures.cpp  DataStructures.hpp  GraphAlgorithms.cpp  GraphAlgorithms.hpp  SearchAlgorithms.cpp  SearchAlgorithms.hpp  SortingAlgorithms.cpp  SortingAlgorithms.hpp
src/concurrency/: AsyncComms.cpp  AsyncComms.hpp  AsyncMissions.cpp  AsyncMissions.hpp  Atomics.cpp  Atomics.hpp  CMakeLists.txt  ConditionalVariables.cpp  ConditionalVariables.hpp  CoroutinesDemo.cpp  CoroutinesDemo.hpp  MutexExamples.cpp  MutexExamples.hpp  ThreadPool.cpp  ThreadPool.hpp
src/memory/: CMakeLists.txt  CustomAllocators.cpp  CustomAllocators.hpp  MemoryPools.cpp  MemoryPools.hpp  RAII_Examples.cpp  RAII_Examples.hpp  SmartPointers.cpp  SmartPointers.hpp
src/modern/: CMakeLists.txt  ConceptsAdvanced.hpp  ContexprProgramming.hpp  LambdaExpressions.cpp  LambdaExpressions.hpp  ModulesDemo.cpp  ModulesDemo.hpp  MoveSemantics.cpp  MoveSemantics.hpp  RangesDemo.cpp  RangesDemo.hpp  StructuredBindings.hpp
src/patterns/: Adapter.cpp  Adapter.hpp  Builder.cpp  Builder.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Decorator.cpp  Decorator.hpp  Observer.cpp  Observer.hpp  Singleton.hpp  State.cpp  State.hpp  Strategy.cpp  Strategy.hpp
src/stl_showcase/: Algorithms.cpp  Algorithms.hpp  CMakeLists.txt  Containers.cpp  Containers.hpp  Functors.cpp  Functors.hpp  Iterators.cpp  Iterators.hpp  STLUtilities.cpp  STLUtilities.hpp
src/templates/: CMakeLists.txt  ConceptsDemo.hpp  GenericContainers.hpp  MetaProgramming.hpp  SFINAE_Examples.hpp  TemplateSpecialization.hpp  VariadicTemplates.hpp
src/utils/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  FileParser.cpp  FileParser.hpp  Logger.cpp  Logger.hpp  MathUtils.cpp  MathUtils.hpp  StringUtils.cpp  StringUtils.hpp  TimeUtils.cpp  TimeUtils.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/benchmark_tests/: AlgorithmBenchmarks.cpp  ConcurrencyBenchmarks.cpp  ContainerBenchmarks.cpp
tests/integration_tests/: ConcurrencyIntegrationTests.cpp  FileIOIntegrationTests.cpp  SimulationIntegrationTests.cpp
tests/unit_tests/concurrency_tests/: AsyncTests.cpp  SynchronizationTests.cpp  ThreadPoolTests.cpp
tests/unit_tests/core_tests/: EntityTests.cpp  FactoryTests.cpp  MissionTests.cpp  ResourceManagerTests.cpp
tests/unit_tests/memory_tests/: AllocatorTests.cpp  RAIITests.cpp  SmartPointerTest.cpp
tests/unit_tests/pattern_tests/: DecoratorTests.cpp  ObserverTests.cpp  StrategyTests.cpp
tests/unit_tests/stl_tests/: AlgorithmTests.cpp  ContainerTests.cpp  IteratorTests.cpp
tests/unit_tests/template_tests/: ConceptTests.cpp  GenericContainerTests.cpp  MetaProgrammingTests.cpp
tools/clang-format/: .clang-format
tools/doxygen/: Doxyfile  custom.css
tools/static_analysis/: .clang-tidy  run_analysis.sh
